
set(APPLICATION_NAME Tests)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

find_package(QT NAMES Qt6 Qt5 COMPONENTS Core Test REQUIRED)
find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core Test REQUIRED)

set(SOURCE_DIR ${PROJECT_SOURCE_DIR}/${APPLICATION_NAME}/)

set(SOURCES
	tst_netcowork.cpp
)

include_directories(${PROJECT_SOURCE_DIR}/include)
add_executable(${APPLICATION_NAME} ${SOURCES})

target_link_libraries(${APPLICATION_NAME} PRIVATE NetCowork Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::Test)

install(TARGETS ${APPLICATION_NAME} DESTINATION bin)
